[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/Table.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game.gd" type="Script" id=3]
[ext_resource path="res://scenes/Dice.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/DiceCam.gd" type="Script" id=5]
[ext_resource path="res://scripts/StartCam.gd" type="Script" id=6]
[ext_resource path="res://DiceCamEffect.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game UI.tscn" type="PackedScene" id=8]
[ext_resource path="res://img/vloer.png" type="Texture" id=9]
[ext_resource path="res://environments/new_environment.tres" type="Environment" id=10]
[ext_resource path="res://EYES.tscn" type="PackedScene" id=11]
[ext_resource path="res://trail.tscn" type="PackedScene" id=12]
[ext_resource path="res://particleFog.tscn" type="PackedScene" id=13]

[sub_resource type="CylinderMesh" id=11]
top_radius = 45.0
bottom_radius = 45.0
height = 1.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.054902, 0.282353, 0.156863, 1 )
albedo_texture = ExtResource( 9 )
uv1_scale = Vector3( 50, 50, 50 )

[sub_resource type="ConcavePolygonShape" id=10]
data = PoolVector3Array( -250, 1, 250, 250, 1, 250, -250, -1, 250, 250, 1, 250, 250, -1, 250, -250, -1, 250, 250, 1, -250, -250, 1, -250, 250, -1, -250, -250, 1, -250, -250, -1, -250, 250, -1, -250, 250, 1, 250, 250, 1, -250, 250, -1, 250, 250, 1, -250, 250, -1, -250, 250, -1, 250, -250, 1, -250, -250, 1, 250, -250, -1, -250, -250, 1, 250, -250, -1, 250, -250, -1, -250, 250, 1, 250, -250, 1, 250, 250, 1, -250, -250, 1, 250, -250, 1, -250, 250, 1, -250, -250, -1, 250, 250, -1, 250, -250, -1, -250, 250, -1, 250, 250, -1, -250, -250, -1, -250 )

[sub_resource type="Animation" id=9]
resource_name = "Light"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.6, 0.6 ]
}

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 4.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 4 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.1
emission_shape = 2
emission_box_extents = Vector3( 80, 20, 1 )
spread = 100.0
gravity = Vector3( 0, 1, 0 )
scale = 2.0
scale_curve = SubResource( 4 )
color = Color( 0, 0, 0, 1 )
color_ramp = SubResource( 6 )
anim_speed = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[node name="Game" type="Spatial"]
script = ExtResource( 3 )

[node name="Game_UI" parent="." instance=ExtResource( 8 )]

[node name="StartCam" type="Camera" parent="."]
transform = Transform( 0.158311, -0.494922, 0.854394, 0.0102236, 0.866082, 0.499798, -0.987336, -0.0703885, 0.14217, 7.57331, 3.55013, 0.670303 )
current = true
script = ExtResource( 6 )
DiceCam = NodePath("../DiceCam")
Trail = NodePath("../trail")

[node name="Table" parent="." instance=ExtResource( 1 )]
transform = Transform( -3.49691e-08, 0, 0.8, 0, 0.8, 0, -0.8, 0, -3.49691e-08, -18.4732, -5.44771, 0 )

[node name="Dice" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.21619, 1.88669, -1.87075 )

[node name="DiceCam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.766045, 0.642788, 0, -0.642788, 0.766045, 0, 0, 0 )
far = 8192.0
script = ExtResource( 5 )
dice = NodePath("../Dice")
diceOffset = Vector3( 0, 2, 1.8 )

[node name="Hand" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 10.5683, 0.581873, -1.76025 )

[node name="Floor" type="StaticBody" parent="." groups=["ground", "out"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.93181, 0, 20.1026 )

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.9392, -20.1932, -22.4949 )
mesh = SubResource( 11 )
material/0 = SubResource( 2 )
__meta__ = {
"_vol_id": 25
}

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.2665, -20.4895, -22.4949 )
shape = SubResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.906372, -0.0204898, 0.421984, 0.42248, -0.0419794, 0.9054, -0.000836845, 0.998908, 0.0467055, 0, 26.7864, 0 )
light_energy = 1.5
shadow_enabled = true
directional_shadow_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DirectionalLight"]
autoplay = "Light"
anims/Light = SubResource( 9 )

[node name="DiceCamEffect" parent="." instance=ExtResource( 7 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 10 )

[node name="trail" parent="." instance=ExtResource( 12 )]
visible = false

[node name="FOG" type="Spatial" parent="."]
visible = false

[node name="Spatial" parent="FOG" instance=ExtResource( 13 )]
transform = Transform( -0.0433579, 0, -0.99906, 0, 1, 0, 0.99906, 0, -0.0433579, -76.5453, -3.83818, 51.252 )
visible = false

[node name="FOG" parent="FOG/Spatial" index="0"]
transform = Transform( 0.0289335, 0, -0.999581, 0, 1, 0, 0.999581, 0, 0.0289335, -83.3444, 0, -38.6575 )
visible = false
amount = 30000
visibility_aabb = AABB( -79.7739, -23.8829, -4, 159.548, 47.7659, 8 )
process_material = SubResource( 8 )

[node name="Spatial2" parent="FOG" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.01323, -4.78519, 27.6568 )
visible = false

[node name="FOG" parent="FOG/Spatial2" index="0"]
transform = Transform( 0.0289335, 0, -0.999581, 0, 1, 0, 0.999581, 0, 0.0289335, -83.3444, 0, -38.6575 )
visible = false
amount = 30000
visibility_aabb = AABB( -80.6255, -19.1195, -4, 161.251, 38.239, 8 )
process_material = SubResource( 8 )

[node name="Spatial3" parent="FOG" instance=ExtResource( 13 )]
transform = Transform( 0.0991639, 0.0262293, 0.994725, -0.00260189, 0.999656, -0.0260999, -0.995068, 0, 0.0991981, 17.5468, -8.10327, -20.4273 )
visible = false

[node name="FOG" parent="FOG/Spatial3" index="0"]
transform = Transform( 0.0289335, -2.32831e-10, -0.999581, -5.57155e-09, 1, 1.15838e-10, 0.999581, 0, 0.0289335, -55.0739, 2.38419e-07, -41.4758 )
visible = false
amount = 30000
visibility_aabb = AABB( -79.0589, -16.6434, -4, 158.118, 33.2868, 8 )
local_coords = false
draw_order = 2
process_material = SubResource( 8 )

[node name="Spatial4" parent="FOG" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 95.4239, -4.78519, 27.6568 )
visible = false

[node name="FOG" parent="FOG/Spatial4" index="0"]
transform = Transform( 0.0289335, 0, -0.999581, 0, 1, 0, 0.999581, 0, 0.0289335, -83.3444, 0, -38.6575 )
visible = false
amount = 30000
visibility_aabb = AABB( -79.2899, -20.7047, -4, 158.58, 41.4094, 8 )
process_material = SubResource( 8 )

[node name="Eyes" type="Spatial" parent="."]

[node name="Eyes" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 4.64151, 0, 0.633692, 0, 6, 0, -3.80215, 0, 0.773586, -61.0362, 0.41753, -35.9139 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 5.30988, 0, -0.46563, 0, 6, 0, 2.79378, 0, 0.884979, -8.29465, 0.547534, -41.4366 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES2" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 0.693264, 0, -0.993302, 0, 6, 0, 5.95981, 0, 0.115544, -77.4834, -7.29031, 1.94138 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES3" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( -3.2615, 0, 0.839354, 0, 6, 0, -5.03612, 0, -0.543585, -72.4966, -6.18115, 19.156 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES4" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 5.36098, 0, 0.449069, 0, 6, 0, -2.69442, 0, 0.893497, -12.2646, 4.61806, 38.3983 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES5" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 5.99843, 0, 0.022862, 0, 6, 0, -0.13717, 0, 0.999739, -31.367, -2.68817, -47.9448 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES6" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( -4.44799, 0, 0.671139, 0, 6, 0, -4.02683, 0, -0.741332, 6.07261, 5.11783, -29.6118 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES7" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 1.53247, 0, 0.966832, 0, 6, 0, -5.80099, 0, 0.255412, 12.4818, -8.55736, 8.57221 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES8" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 2.6112, 0, 0.900334, 0, 6, 0, -5.40201, 0, 0.4352, -73.544, -8.90689, -19.9009 )
modulate = Color( 5, 0, 0, 1 )

[node name="EYES9" parent="Eyes" instance=ExtResource( 11 )]
transform = Transform( 4.79131, 0, -0.601926, 0, 6, 0, 3.61156, 0, 0.798552, -55.2065, -3.79269, 36.7511 )
modulate = Color( 5, 0, 0, 1 )

[node name="Spatial" type="Spatial" parent="."]

[connection signal="foefelen" from="Dice" to="." method="_on_Dice_foefelen"]
[connection signal="thrown" from="Hand" to="StartCam" method="_on_Hand_thrown"]
[connection signal="thrown" from="Hand" to="Dice" method="_on_Hand_thrown"]

[editable path="FOG/Spatial"]
[editable path="FOG/Spatial2"]
[editable path="FOG/Spatial3"]
[editable path="FOG/Spatial4"]
